test/functions/diten/paramFnWithSideEffects.good
paramFnWithSideEffects.chpl:6: error: all statements in param function must be parameters
